# yamaweb

./: .dockerignore  Dockerfile  pyproject.toml
yamaweb/: __init__.py  convert2yamamoto.py
yamaweb/static/: index.html
