[tool.poetry]
name = "yamaweb"
version = "1.0.0"
description = ""
authors = ["Futafi <D.futagi@vivaldi.net>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
Flask = "^2.0.2"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
